# actix-tracing-opentelemetry

./: Cargo.toml  README.md
resources/properties/: default.yaml
src/: color.rs  main.rs  properties.rs
src/article/: mod.rs
src/user/: mod.rs
