[package]
name = "rust-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
async-trait = "0.1.50"
chrono = "0.4"
serde = "1.0"
thiserror = "1.0"
anyhow = "1.0"

config = "0.11"

#log = "0.4"
#env_logger = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-actix-web = "0.4.0-beta.9"
#tracing-elastic-apm = "2.2"
tracing-opentelemetry = "0.14"
opentelemetry = "0.15"
opentelemetry-otlp = { version = "0.8", features = ["http-proto", "reqwest-client"] }
actix-web-opentelemetry = "0.11.0-beta.4"
#tokio = { version = "1.0", features = ["full"], optional = true }

#reqwest = "0.11"